--- a/scss/components/_combat.scss
+++ b/scss/components/_combat.scss
@@ -44,6 +44,7 @@
         }
     }
     .offense-area, .defense-area {
+        max-width: 430px;
         .editor {
             min-height: var(--form-field-height);;
         }
